added descriptions of observable trends in the data

--- a/PyCitySchools/schoolsAnalysis.ipynb
+++ b/PyCitySchools/schoolsAnalysis.ipynb
@@ -8,7 +8,17 @@
     "# School Analysis\n",
     "___\n",
     "\n",
-    "Report on two observable trends based on the data. "
+    "Observable Trends\n",
+    "- Average math scores were pretty consistent across grades within schools (<=3 point change across grades for all schools)\n",
+    "\n",
+    "- Average reading scores were pretty consistent across grades within schools (<=2 point change across grades for all schools)\n",
+    "\n",
+    "- Spending per student was inversely correlated with overall passing rates. Schools in the lowest spending range (<585) had the best overall passing rate (90%) of the spending per student categories. Schools in the highest spending range (645-680) had the worst overall passing rate (53%).\n",
+    "\n",
+    "- Relative to overall passing rates, the top five schools were charter schools while the bottom five were district schools. \n",
+    "\n",
+    "- Charter schools had higher scores and passing rates than district schools across all categories. However, charter schools on average have >2000 fewer students than district schools. \n",
+    "    - The relationship between school performance (measured using average scores and passing rates) and school type (district or charter) may be confounded by the relationship between school performance and school size. Schools in the small (<1000 students) and medium (1000-2000 students) size ranges performed better on all metrics compared to larger (>2000 students) schools. Since charter schools are on average smaller than district schools, it is plausible that the better performance of charter schools is at least partly due to their size. "
    ]
   },
   {
@@ -1621,7 +1631,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\speer\\AppData\\Local\\Temp\\ipykernel_12724\\4016608898.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "C:\\Users\\speer\\AppData\\Local\\Temp\\ipykernel_16400\\4016608898.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  budget_per_school = full_data.groupby(['school_name']).mean()['budget']\n"
      ]
     },
@@ -1721,7 +1731,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\speer\\AppData\\Local\\Temp\\ipykernel_12724\\69995993.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "C:\\Users\\speer\\AppData\\Local\\Temp\\ipykernel_16400\\69995993.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  avg_math_score_per_school = full_data.groupby(['school_name']).mean()['math_score']\n"
      ]
     },
@@ -1775,7 +1785,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\speer\\AppData\\Local\\Temp\\ipykernel_12724\\2345971864.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "C:\\Users\\speer\\AppData\\Local\\Temp\\ipykernel_16400\\2345971864.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  avg_read_score_per_school = full_data.groupby(['school_name']).mean()['reading_score']\n"
      ]
     },
@@ -3459,7 +3469,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\speer\\AppData\\Local\\Temp\\ipykernel_12724\\1941720827.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "C:\\Users\\speer\\AppData\\Local\\Temp\\ipykernel_16400\\1941720827.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  reading_score_by_grade = pd.DataFrame(full_data.groupby(['school_name', 'grade']).mean()['reading_score'])\n"
      ]
     },
@@ -3839,7 +3849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -4145,7 +4155,7 @@
        "Wright High School                   90.333333  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4157,7 +4167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4168,7 +4178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -4186,7 +4196,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4199,7 +4209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -4505,7 +4515,7 @@
        "Wright High School                   96.611111                90.333333  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4528,7 +4538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -4546,7 +4556,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4557,7 +4567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -4898,7 +4908,7 @@
        "Wright High School                            <$585  "
       ]
      },
-     "execution_count": 149,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4911,7 +4921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4925,7 +4935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -5024,7 +5034,7 @@
        "$645-680                               53.526855  "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5051,7 +5061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5064,7 +5074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -5387,7 +5397,7 @@
        "Wright High School                   90.333333  Medium (1000-2000)  "
       ]
      },
-     "execution_count": 154,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5401,7 +5411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5415,7 +5425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -5497,7 +5507,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5525,10 +5535,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "\n",
     "# now we're going to look at the relationship between school type and score\n",
     "\n",
     "# we don't need to bin because school type only has two categories\n",
@@ -5543,7 +5556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -5615,7 +5628,7 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5633,6 +5646,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School Type\n",
+       "Charter     1524.250000\n",
+       "District    3853.714286\n",
+       "Name: Total Students, dtype: float64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "school_summary_df.groupby(['School Type']).mean(numeric_only=True)['Total Students']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observable Trends\n",
+    "- Average math scores were pretty consistent across grades within schools (<3 change across grades for all schools)\n",
+    "- Spending per student was inversely correlated with overall passing rates. Schools in the lowest spending range (<585) had the best overall passing rate (90%) of the spending per student categories. Schools in the highest spending range (645-680) had the worst overall passing rate (53%).\n",
+    "- Relative to overall passing rates, the top five schools were charter schools while the bottom five were district schools. \n",
+    "- Charter schools had higher scores and passing rates than district schools across all categories. However, charter schools on average have >2000 fewer students than district schools. \n",
+    "    - The relationship between school performance (measured using average scores and passing rates) and school type (district or charter) may be confounded by the relationship between school performance and school size. Schools in the small (<1000 students) and medium (1000-2000 students) size ranges performed better on all metrics compared to larger (>2000 students) schools. Since charter schools are on average smaller than district schools, it is plausible that the better performance of charter schools is at least partly due to their size. "
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -5643,7 +5692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -5870,7 +5919,7 @@
        "[39170 rows x 11 columns]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5889,7 +5938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -5947,7 +5996,7 @@
        "0            81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 162,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5966,7 +6015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -6289,7 +6338,7 @@
        "Wright High School                   90.333333  Medium (1000-2000)  "
       ]
      },
-     "execution_count": 163,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6308,7 +6357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -6454,7 +6503,7 @@
        "Pena High School                   90.540541  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6465,7 +6514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -6611,7 +6660,7 @@
        "Johnson High School                  53.539172  "
       ]
      },
-     "execution_count": 165,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6630,7 +6679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -6797,7 +6846,7 @@
        "Wright High School     83.264706   84.010288   83.836782   83.644986"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6816,7 +6865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -6983,7 +7032,7 @@
        "Wright High School     83.833333   83.812757   84.156322   84.073171"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7002,7 +7051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -7101,7 +7150,7 @@
        "$645-680                               53.526855  "
       ]
      },
-     "execution_count": 170,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7120,7 +7169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -7202,7 +7251,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 171,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7221,7 +7270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -7293,7 +7342,7 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
